@@ -1,3 +1,10 @@
+2012-12-17 Paulo Andrade <pcpa@gnu.org>
+
+	* check/Makefile.am: Automatically generate pattern list
+	of tests with alternate jit generation options. This should
+	prevent typos and needing to change multiple places after
+	a change.
+
 2012-12-14 Paulo Andrade <pcpa@gnu.org>
 
 	* check/lightning.c: Remove the ".cpu name value" syntax,
